# crewai_research_project

research_blog/: README.md  demo.ipynb  pyproject.toml  requirements.txt
research_blog/blogs/: blog.md
research_blog/src/research_blog/: crew.py  main.py
research_blog/src/research_blog/config/: agents.yaml  tasks_config.yaml
